2005-11-27   Konstantin Triger <kostat@mainsoft.com>

        * TypeData.cs, XmlSchemaExporter.cs, TypeTranslator.cs: correctly
		export non-xsd primitive types.

2005-11-24  Vladimir Krasnov  <vladimirk@mainsoft.com>
	
	* XmlTypeMapping.cs: fixed GetXmlName method, added difference
	of value serialization of flags and non-flags enums

2005-11-23  Konstantin Triger <kostat@mainsoft.com>

	* XmlSchemaExporter.cs: do not import empty namespaces.

2005-11-17  Vladimir Krasnov  <vladimirk@mainsoft.com>
	
	* XmlSerializationReaderInterpreter.cs: fixed ReadEnumElement 
	method, ReadEndElement should check XmlNodeType.
	* XmlTypeMapping.cs: fixed GetXmlName method, it should not
	write zero as default enum value.

2005-11-16  Vladimir Krasnov  <vladimirk@mainsoft.com>
	
	* XmlReflectionImporter.cs: fixed field order returned by 
	reflection in method GetReflectionMembers. TARGET_JVM only.

2005-11-07  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlSchemaImporter.cs: Added support for restrictions with
	embedded simple type definitions. 

2005-11-04  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlElementAttribute.cs : gimme Order; it fixes 100 or more
	  sys.xml.schema corcompare diffs.

2005-10-17  Lluis Sanchez Gual  <lluis@novell.com>

	* SerializationCodeGenerator.cs: 
	* XmlSerializationWriterInterpreter.cs: Arrays of XmlNode don't
	need to be all XmlElments. Fix by Atsushi for bug #76288.

2005-09-26  Lluis Sanchez Gual  <lluis@novell.com>

	* XmlTypeMapping.cs: Added ChoiceMember to ListMap.
	In ListMap.FindElement, take into account the ChoiceMember
	if set.
	* SerializationCodeGenerator.cs:
	* XmlSerializationReaderInterpreter.cs: For lists with a choice
	member, fill the member with the corresponding enum values.
	* XmlReflectionImporter.cs: Properly reflect the choice member
	when applied to a list.
	* XmlSerializationWriterInterpreter.cs: Track class changes.
	* XmlTypeMapMemberElement.cs: Added ChoiceTypeData property.
	All this fixes bug #76203.
