@@ -1,3 +1,9 @@
+2005-12-01  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* TypeTranslator.cs: In GetTypeData, if an xmlType is specified for
+	a cli array type, consider it refering to the type of array elements.
+	This fixes bug #76860. Also added some locking.
+
 2005-11-27   Konstantin Triger <kostat@mainsoft.com>
 
         * TypeData.cs, XmlSchemaExporter.cs, TypeTranslator.cs: correctly
